fix(yaml): keep message-catalog iteration order deterministic
Map.copyOf randomizes iteration order per JVM run, which made tags()
ordering (and with it coverage declarations and the client catalog
module) non-deterministic. Wrap the tag-sorted and insertion-ordered
maps unmodifiable instead.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>